<resources>
    <string name="app_name">NgidolYuk</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_schdule">Schdule</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_category">Category</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Popular Member</string>
    <string name="schdule">Jadwal Theater JKT48</string>
    <string name="category_detail">Category Detail</string>
    
    
    <string name="menu_menu">Categories</string>

</resources>
