<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ngidolyuk.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.ngidolyuk.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_schdule"
        android:name="com.example.ngidolyuk.ui.schdule.SchduleFragment"
        android:label="@string/menu_schdule"
        tools:layout="@layout/fragment_schdule" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.ngidolyuk.ui.signout.SignOutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.ngidolyuk.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.ngidolyuk.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />


    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.ngidolyuk.ui.CategoryList.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_category_detail"
        android:name="com.example.ngidolyuk.ui.categorydetail.CategoryDetailFragment"
        android:label="@string/category_detail"
        tools:layout="@layout/fragment_category_detail" />

    <fragment
        android:id="@+id/nav_bestdeal_detail"
        android:name="com.example.ngidolyuk.ui.categorydetail.BestDealDetailFragment"
        android:label="@string/category_detail"
        tools:layout="@layout/fragment_bestdeal_detail" />
</navigation>