<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

    </group>

    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_menu" />
    </group>

    <group android:id="@+id/schdule_group">
        <item
            android:id="@+id/nav_schdule"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/menu_schdule" />
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_signout" />
    </group>



</menu>
